Add client name through input

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <h3>MOB:-9540706399, Email.id-sakshirailcargo2019@gmail.com</h3>
         <h2>QUATATION</h2>
       </div>
-<p>CLIENT NAME LOGI TRANS INDIA</p>
+<p>CLIENT NAME:<input style="background-color: #dd468a; color: azure; font-size: large; font-style: italic; border: none;"/></p>
       <table id="myTable" border="6px">
         <thead>
             <tr>
